test/body/plain_text.rs
use dioxus_html_macro::html;

fn main() {
    html!(
        <div>
           oops, I forgot to wrap it in quotes
        </div>
    );
}
